--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
-language: php
-php:
-  - 5.5
-  - 5.4
-  - hhvm
-script: phpunit Test.php
+language: python
+python:
+  - "2.6"
+  - "2.7"
+# command to install dependencies
+install: "pip install -r requirements.txt"
+# command to run tests
+script: nosetests
