--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,10 @@ python:
   - "2.7"
 # command to install dependencies
 install: "pip install -r requirements.txt"
+  - pip install numpy
+  - pip install scipy
+  - pip install scikit-learn
+  - pip install coveralls
+  - python setup.py install
 # command to run tests
 script: nosetests
