--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,16 @@ python:
   - "2.7"
 # command to install dependencies
 install:
-  - pip install numpy
-  - pip install scipy
-  - pip install scikit-learn
+  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  - conda info -a
+
+  - conda create -q -n test-environment python=3.4 numpy==1.9.2 scipy==0.15.1 scikit-learn==0.16.1 nose coverage pip
+  - source activate test-environment
   - pip install coveralls
   - python setup.py install
 # command to run tests
