--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,8 @@ python:
   - "2.7"
 # command to install dependencies
 install:
-  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - export PATH="$HOME/miniconda/bin:$PATH"
-  - hash -r
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
-  - conda info -a
-
-  - conda create -q -n test-environment python=2.7.8 numpy==1.9.2 scipy==0.15.1 scikit-learn==0.16.8 nose coverage pip
-  - source activate test-environment
-  - pip install coveralls
-  - python setup.py install
+  - sudo apt-get install -qq python-numpy python-scipy python-pandas python-sklearn
+  - pip install -r requirements.txt
+  - "sudo rm -rf /dev/shm && sudo ln -s /run/shm /dev/shm"
 # command to run tests
 script: nosetests
