--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   # Useful for debugging any issues with conda
   - conda info -a
 
-  - conda create -q -n test-environment python=2.7 numpy==1.11.1 scipy==0.18.1 scikit-learn==0.18 nose coverage pip libgfortran
+  - conda create -q -n test-environment cython>=0.24 python=2.7 numpy==1.11.1 scipy==0.18.1 scikit-learn==0.18 nose coverage pip libgfortran
   - source activate test-environment
   - pip install coveralls
   - python setup.py install
